instance.tf
resource "aws_instance" "instance" {
 ami
vpc_security_group_ids =
instance_type =
key_name =
count =
tags =
